antlr/gramaticas/.antlr/Pl2compilerParser.java
// Generated from c:\Users\nuria\OneDrive - Universidad de Alcala\Documentos\github\PEC3AnalizadorLenguaje\antlr\gramaticas\Pl2compilerParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Pl2compilerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CASE=1, BREAK=2, DEFAULT=3, BOOLEAN=4, FALSO=5, VERDADERO=6, IF=7, ELSE=8, 
		THEN=9, ENDIF=10, BEGIN=11, END=12, INCLUDE=13, FUNCTION=14, VOID=15, 
		STRING=16, WHILE=17, FOR=18, ENDFOR=19, FROM=20, STEP=21, TO=22, DO=23, 
		NUMERO=24, DEVOLVER=25, MAIN=26, PC=27, PL=28, PR=29, DOSPUNTOS=30, PUNTO=31, 
		COMA=32, INCREMENTOEN1=33, DECREMENTOEN1=34, ADD=35, MINUS=36, PRODUCT=37, 
		DIVISION=38, ASIGN=39, PORCENTAJE=40, MENORQUE=41, MAYORQUE=42, IGUALQUE=43, 
		DISTINTOQUE=44, PUERTALOGICAAND=45, PUERTALOGICAOR=46, DIGITO=47, FLOTANTE=48, 
		NEWLINE=49, ARRAY=50, ID=51, NOMBREPAQUETE=52, CADENA=53, COMENTARIO_LINEA=54, 
		COMENTARIO_LINEA2=55, COMENTARIO_BLOQUE=56, COMENTARIO_DOCUMENTACION=57, 
		WS=58;
	public static final int
		RULE_prog = 0, RULE_libreria = 1, RULE_asignacion = 2, RULE_condicion = 3, 
		RULE_condicionalif = 4, RULE_condicionalelse = 5, RULE_condicionales = 6, 
		RULE_funcionwhile = 7, RULE_funcionfor = 8, RULE_cuerpo = 9, RULE_cuerpo2 = 10, 
		RULE_cuerpo3 = 11, RULE_llamarfuncion = 12, RULE_llamadafuncion = 13, 
		RULE_codigo = 14, RULE_crearfuncion = 15, RULE_devolver = 16, RULE_retorno = 17, 
		RULE_cabecerafuncion = 18, RULE_expr = 19, RULE_expresionlogica = 20, 
		RULE_nombrefuncion = 21, RULE_nombrevariable = 22, RULE_nombrepaquete = 23, 
		RULE_operadorasignacion = 24, RULE_parametros = 25, RULE_parametro = 26, 
		RULE_operadoraritmeticoproducto = 27, RULE_operadoraritmeticodivision = 28, 
		RULE_operadoraritmeticosuma = 29, RULE_operadoraritmeticoresta = 30, RULE_operadoraritmeticosuma1 = 31, 
		RULE_operadoraritmeticoresta1 = 32, RULE_operadorlogico = 33, RULE_operadorcondicionalpuertalogica = 34, 
		RULE_cadena = 35, RULE_separadoroperaciones = 36, RULE_separadoroperadores = 37, 
		RULE_separadordospuntos = 38, RULE_operadoraperturaparentesis = 39, RULE_operadorcierreparentesis = 40, 
		RULE_tipovariable = 41, RULE_comentarios = 42, RULE_entero = 43, RULE_flotante = 44, 
		RULE_numeros = 45, RULE_palabraclavebooleano = 46, RULE_palabraclavebuclefor = 47, 
		RULE_palabraclaveendbuclefor = 48, RULE_palabraclaveinciovalorfor = 49, 
		RULE_palabraclavesaltoelementofor = 50, RULE_palabraclavefinvalorfor = 51, 
		RULE_palabraclavehacerfor = 52, RULE_palabraclavebuclewhile = 53, RULE_palabrareservadacase = 54, 
		RULE_palabrareservadabreak = 55, RULE_palabrareservadadefault = 56, RULE_palabraclaveifcondicion = 57, 
		RULE_palabraclaveelsecondicion = 58, RULE_palabraclavethen = 59, RULE_palabraclaveendif = 60, 
		RULE_palabraclaveincluirlibreria = 61, RULE_palabraclavecreacionfuncion = 62, 
		RULE_palabraclavefuncionmain = 63, RULE_palabraclavefunciondevolver = 64, 
		RULE_palabraclaveinicio = 65, RULE_palabraclavefin = 66;
	public static final String[] ruleNames = {
		"prog", "libreria", "asignacion", "condicion", "condicionalif", "condicionalelse", 
		"condicionales", "funcionwhile", "funcionfor", "cuerpo", "cuerpo2", "cuerpo3", 
		"llamarfuncion", "llamadafuncion", "codigo", "crearfuncion", "devolver", 
		"retorno", "cabecerafuncion", "expr", "expresionlogica", "nombrefuncion", 
		"nombrevariable", "nombrepaquete", "operadorasignacion", "parametros", 
		"parametro", "operadoraritmeticoproducto", "operadoraritmeticodivision", 
		"operadoraritmeticosuma", "operadoraritmeticoresta", "operadoraritmeticosuma1", 
		"operadoraritmeticoresta1", "operadorlogico", "operadorcondicionalpuertalogica", 
		"cadena", "separadoroperaciones", "separadoroperadores", "separadordospuntos", 
		"operadoraperturaparentesis", "operadorcierreparentesis", "tipovariable", 
		"comentarios", "entero", "flotante", "numeros", "palabraclavebooleano", 
		"palabraclavebuclefor", "palabraclaveendbuclefor", "palabraclaveinciovalorfor", 
		"palabraclavesaltoelementofor", "palabraclavefinvalorfor", "palabraclavehacerfor", 
		"palabraclavebuclewhile", "palabrareservadacase", "palabrareservadabreak", 
		"palabrareservadadefault", "palabraclaveifcondicion", "palabraclaveelsecondicion", 
		"palabraclavethen", "palabraclaveendif", "palabraclaveincluirlibreria", 
		"palabraclavecreacionfuncion", "palabraclavefuncionmain", "palabraclavefunciondevolver", 
		"palabraclaveinicio", "palabraclavefin"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'case'", "'break'", "'default'", null, null, null, "'if'", "'else'", 
		"'then'", "'endif'", "'begin'", "'end'", "'include'", "'function'", "'void'", 
		"'cadena'", "'while'", "'for'", "'enddo'", "'from'", "'step'", "'to'", 
		"'do'", "'numero'", "'devolver'", "'main'", "';'", "'('", "')'", "':'", 
		"'.'", "','", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "':='", "'%'", 
		"'<'", "'>'", "'=='", "'!='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "CASE", "BREAK", "DEFAULT", "BOOLEAN", "FALSO", "VERDADERO", "IF", 
		"ELSE", "THEN", "ENDIF", "BEGIN", "END", "INCLUDE", "FUNCTION", "VOID", 
		"STRING", "WHILE", "FOR", "ENDFOR", "FROM", "STEP", "TO", "DO", "NUMERO", 
		"DEVOLVER", "MAIN", "PC", "PL", "PR", "DOSPUNTOS", "PUNTO", "COMA", "INCREMENTOEN1", 
		"DECREMENTOEN1", "ADD", "MINUS", "PRODUCT", "DIVISION", "ASIGN", "PORCENTAJE", 
		"MENORQUE", "MAYORQUE", "IGUALQUE", "DISTINTOQUE", "PUERTALOGICAAND", 
		"PUERTALOGICAOR", "DIGITO", "FLOTANTE", "NEWLINE", "ARRAY", "ID", "NOMBREPAQUETE", 
		"CADENA", "COMENTARIO_LINEA", "COMENTARIO_LINEA2", "COMENTARIO_BLOQUE", 
		"COMENTARIO_DOCUMENTACION", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pl2compilerParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Pl2compilerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<LibreriaContext> libreria() {
			return getRuleContexts(LibreriaContext.class);
		}
		public LibreriaContext libreria(int i) {
			return getRuleContext(LibreriaContext.class,i);
		}
		public List<CrearfuncionContext> crearfuncion() {
			return getRuleContexts(CrearfuncionContext.class);
		}
		public CrearfuncionContext crearfuncion(int i) {
			return getRuleContext(CrearfuncionContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(136);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case INCLUDE:
					{
					setState(134);
					libreria();
					}
					break;
				case FUNCTION:
					{
					setState(135);
					crearfuncion();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(138); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==INCLUDE || _la==FUNCTION );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LibreriaContext extends ParserRuleContext {
		public List<PalabraclaveincluirlibreriaContext> palabraclaveincluirlibreria() {
			return getRuleContexts(PalabraclaveincluirlibreriaContext.class);
		}
		public PalabraclaveincluirlibreriaContext palabraclaveincluirlibreria(int i) {
			return getRuleContext(PalabraclaveincluirlibreriaContext.class,i);
		}
		public List<NombrepaqueteContext> nombrepaquete() {
			return getRuleContexts(NombrepaqueteContext.class);
		}
		public NombrepaqueteContext nombrepaquete(int i) {
			return getRuleContext(NombrepaqueteContext.class,i);
		}
		public List<SeparadoroperacionesContext> separadoroperaciones() {
			return getRuleContexts(SeparadoroperacionesContext.class);
		}
		public SeparadoroperacionesContext separadoroperaciones(int i) {
			return getRuleContext(SeparadoroperacionesContext.class,i);
		}
		public LibreriaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_libreria; }
	}

	public final LibreriaContext libreria() throws RecognitionException {
		LibreriaContext _localctx = new LibreriaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_libreria);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(144); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(140);
					palabraclaveincluirlibreria();
					setState(141);
					nombrepaquete();
					setState(142);
					separadoroperaciones();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(146); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public SeparadoroperacionesContext separadoroperaciones() {
			return getRuleContext(SeparadoroperacionesContext.class,0);
		}
		public List<NombrevariableContext> nombrevariable() {
			return getRuleContexts(NombrevariableContext.class);
		}
		public NombrevariableContext nombrevariable(int i) {
			return getRuleContext(NombrevariableContext.class,i);
		}
		public TipovariableContext tipovariable() {
			return getRuleContext(TipovariableContext.class,0);
		}
		public OperadorasignacionContext operadorasignacion() {
			return getRuleContext(OperadorasignacionContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<SeparadoroperadoresContext> separadoroperadores() {
			return getRuleContexts(SeparadoroperadoresContext.class);
		}
		public SeparadoroperadoresContext separadoroperadores(int i) {
			return getRuleContext(SeparadoroperadoresContext.class,i);
		}
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_asignacion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				{
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VOID) | (1L << STRING) | (1L << NUMERO))) != 0)) {
					{
					setState(148);
					tipovariable();
					}
				}

				setState(151);
				nombrevariable();
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASIGN) {
					{
					setState(152);
					operadorasignacion();
					setState(153);
					expr(0);
					}
				}

				}
				}
				break;
			case 2:
				{
				{
				setState(157);
				tipovariable();
				setState(158);
				nombrevariable();
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(159);
					separadoroperadores();
					setState(160);
					nombrevariable();
					}
					}
					setState(166);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			}
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PC) {
				{
				setState(169);
				separadoroperaciones();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionContext extends ParserRuleContext {
		public OperadoraperturaparentesisContext operadoraperturaparentesis() {
			return getRuleContext(OperadoraperturaparentesisContext.class,0);
		}
		public ExpresionlogicaContext expresionlogica() {
			return getRuleContext(ExpresionlogicaContext.class,0);
		}
		public OperadorcierreparentesisContext operadorcierreparentesis() {
			return getRuleContext(OperadorcierreparentesisContext.class,0);
		}
		public CondicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicion; }
	}

	public final CondicionContext condicion() throws RecognitionException {
		CondicionContext _localctx = new CondicionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_condicion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			operadoraperturaparentesis();
			setState(173);
			expresionlogica();
			setState(174);
			operadorcierreparentesis();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionalifContext extends ParserRuleContext {
		public PalabraclaveifcondicionContext palabraclaveifcondicion() {
			return getRuleContext(PalabraclaveifcondicionContext.class,0);
		}
		public Cuerpo2Context cuerpo2() {
			return getRuleContext(Cuerpo2Context.class,0);
		}
		public Cuerpo3Context cuerpo3() {
			return getRuleContext(Cuerpo3Context.class,0);
		}
		public CuerpoContext cuerpo() {
			return getRuleContext(CuerpoContext.class,0);
		}
		public PalabraclavethenContext palabraclavethen() {
			return getRuleContext(PalabraclavethenContext.class,0);
		}
		public List<CondicionContext> condicion() {
			return getRuleContexts(CondicionContext.class);
		}
		public CondicionContext condicion(int i) {
			return getRuleContext(CondicionContext.class,i);
		}
		public List<OperadorcondicionalpuertalogicaContext> operadorcondicionalpuertalogica() {
			return getRuleContexts(OperadorcondicionalpuertalogicaContext.class);
		}
		public OperadorcondicionalpuertalogicaContext operadorcondicionalpuertalogica(int i) {
			return getRuleContext(OperadorcondicionalpuertalogicaContext.class,i);
		}
		public CondicionalifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicionalif; }
	}

	public final CondicionalifContext condicionalif() throws RecognitionException {
		CondicionalifContext _localctx = new CondicionalifContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_condicionalif);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			palabraclaveifcondicion();
			setState(187);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				{
				setState(177);
				condicion();
				}
				}
				break;
			case 2:
				{
				{
				setState(178);
				condicion();
				setState(184);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==PUERTALOGICAAND || _la==PUERTALOGICAOR) {
					{
					{
					setState(179);
					operadorcondicionalpuertalogica();
					setState(180);
					condicion();
					}
					}
					setState(186);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			}
			setState(190);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==THEN) {
				{
				setState(189);
				palabraclavethen();
				}
			}

			setState(195);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(192);
				cuerpo2();
				}
				break;
			case 2:
				{
				setState(193);
				cuerpo3();
				}
				break;
			case 3:
				{
				setState(194);
				cuerpo();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionalelseContext extends ParserRuleContext {
		public PalabraclaveelsecondicionContext palabraclaveelsecondicion() {
			return getRuleContext(PalabraclaveelsecondicionContext.class,0);
		}
		public Cuerpo2Context cuerpo2() {
			return getRuleContext(Cuerpo2Context.class,0);
		}
		public Cuerpo3Context cuerpo3() {
			return getRuleContext(Cuerpo3Context.class,0);
		}
		public CuerpoContext cuerpo() {
			return getRuleContext(CuerpoContext.class,0);
		}
		public CondicionalelseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicionalelse; }
	}

	public final CondicionalelseContext condicionalelse() throws RecognitionException {
		CondicionalelseContext _localctx = new CondicionalelseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_condicionalelse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			palabraclaveelsecondicion();
			setState(201);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(198);
				cuerpo2();
				}
				break;
			case 2:
				{
				setState(199);
				cuerpo3();
				}
				break;
			case 3:
				{
				setState(200);
				cuerpo();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionalesContext extends ParserRuleContext {
		public CondicionalifContext condicionalif() {
			return getRuleContext(CondicionalifContext.class,0);
		}
		public PalabraclaveendifContext palabraclaveendif() {
			return getRuleContext(PalabraclaveendifContext.class,0);
		}
		public CondicionalelseContext condicionalelse() {
			return getRuleContext(CondicionalelseContext.class,0);
		}
		public CondicionalesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicionales; }
	}

	public final CondicionalesContext condicionales() throws RecognitionException {
		CondicionalesContext _localctx = new CondicionalesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_condicionales);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			condicionalif();
			setState(205);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(204);
				condicionalelse();
				}
			}

			setState(207);
			palabraclaveendif();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionwhileContext extends ParserRuleContext {
		public PalabraclavebuclewhileContext palabraclavebuclewhile() {
			return getRuleContext(PalabraclavebuclewhileContext.class,0);
		}
		public OperadoraperturaparentesisContext operadoraperturaparentesis() {
			return getRuleContext(OperadoraperturaparentesisContext.class,0);
		}
		public OperadorcierreparentesisContext operadorcierreparentesis() {
			return getRuleContext(OperadorcierreparentesisContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExpresionlogicaContext expresionlogica() {
			return getRuleContext(ExpresionlogicaContext.class,0);
		}
		public CuerpoContext cuerpo() {
			return getRuleContext(CuerpoContext.class,0);
		}
		public Cuerpo2Context cuerpo2() {
			return getRuleContext(Cuerpo2Context.class,0);
		}
		public Cuerpo3Context cuerpo3() {
			return getRuleContext(Cuerpo3Context.class,0);
		}
		public FuncionwhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcionwhile; }
	}

	public final FuncionwhileContext funcionwhile() throws RecognitionException {
		FuncionwhileContext _localctx = new FuncionwhileContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_funcionwhile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(209);
			palabraclavebuclewhile();
			setState(210);
			operadoraperturaparentesis();
			setState(213);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				setState(211);
				expr(0);
				}
				break;
			case 2:
				{
				setState(212);
				expresionlogica();
				}
				break;
			}
			setState(215);
			operadorcierreparentesis();
			setState(219);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				{
				setState(216);
				cuerpo();
				}
				break;
			case 2:
				{
				setState(217);
				cuerpo2();
				}
				break;
			case 3:
				{
				setState(218);
				cuerpo3();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionforContext extends ParserRuleContext {
		public PalabraclavebucleforContext palabraclavebuclefor() {
			return getRuleContext(PalabraclavebucleforContext.class,0);
		}
		public List<NombrevariableContext> nombrevariable() {
			return getRuleContexts(NombrevariableContext.class);
		}
		public NombrevariableContext nombrevariable(int i) {
			return getRuleContext(NombrevariableContext.class,i);
		}
		public PalabraclaveinciovalorforContext palabraclaveinciovalorfor() {
			return getRuleContext(PalabraclaveinciovalorforContext.class,0);
		}
		public PalabraclavefinvalorforContext palabraclavefinvalorfor() {
			return getRuleContext(PalabraclavefinvalorforContext.class,0);
		}
		public PalabraclavehacerforContext palabraclavehacerfor() {
			return getRuleContext(PalabraclavehacerforContext.class,0);
		}
		public PalabraclaveendbucleforContext palabraclaveendbuclefor() {
			return getRuleContext(PalabraclaveendbucleforContext.class,0);
		}
		public List<NumerosContext> numeros() {
			return getRuleContexts(NumerosContext.class);
		}
		public NumerosContext numeros(int i) {
			return getRuleContext(NumerosContext.class,i);
		}
		public CuerpoContext cuerpo() {
			return getRuleContext(CuerpoContext.class,0);
		}
		public Cuerpo2Context cuerpo2() {
			return getRuleContext(Cuerpo2Context.class,0);
		}
		public Cuerpo3Context cuerpo3() {
			return getRuleContext(Cuerpo3Context.class,0);
		}
		public PalabraclavesaltoelementoforContext palabraclavesaltoelementofor() {
			return getRuleContext(PalabraclavesaltoelementoforContext.class,0);
		}
		public FuncionforContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcionfor; }
	}
